--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,15 @@
   </dependencies>
   <build>
     <plugins>
+
+      <!-- https://www.mojohaus.org/versions-maven-plugin/ -->
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+      
       <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-install-plugin -->
 
       <plugin>
@@ -32,8 +41,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
     </plugins>
